fixed background image resizing on scroll on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50%;
   background-attachment: fixed;
+
 }
 
 /*Styles for the slideshow overlay*/
@@ -417,7 +418,7 @@ footer a {
 @media only screen and (max-device-width: 480px) {
   body {
     background-image: url('../images/outerspaceSmall.jpg');
-    background-size: cover;
+    background-size: 150vh;
   }
 }
 @media only screen and (max-width: 480px) {  
